--- a/localtv/static/localtv/front/sass/partials/modules/_site_blurb.scss
+++ b/localtv/static/localtv/front/sass/partials/modules/_site_blurb.scss
@@ -1,6 +1,6 @@
 .site-blurb{
 	@extend .padded;
-	@include x-large;
+	@include large;
 	@include box-shadow(0 1px 0 0 rgba(255,255,255,.25) inset);
 }
 
